@@ -56,8 +56,7 @@ class JsonUsmReaderTest extends JsonUsmReaderTestBase {
     }
 
     static String readFile(String path) throws IOException {
-        byte[] encoded = Files.readAllBytes(Paths.get(path));
-        return new String(encoded, StandardCharsets.UTF_8);
+        return Files.readString(Paths.get(path), StandardCharsets.UTF_8);
     }
 
 }
